Tworzenie wlasnych typow (struct), task2

--- a/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj
+++ b/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="firstStructConsoleApplication.cpp" />
     <ClCompile Include="task1.cpp" />
+    <ClCompile Include="task2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tasks.h" />
