--- a/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj
+++ b/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="firstStructConsoleApplication.cpp" />
     <ClCompile Include="task1.cpp" />
     <ClCompile Include="task2.cpp" />
+    <ClCompile Include="task3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tasks.h" />
