--- a/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj.filters
+++ b/programowanie/firstStructConsoleApplication/firstStructConsoleApplication.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="task2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="task3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tasks.h">
