--- a/programowanie/ArrayConsoleApplication/ArrayConsoleApplication.vcxproj
+++ b/programowanie/ArrayConsoleApplication/ArrayConsoleApplication.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2df84dd5-0192-4043-9989-5761de9a1bb2}</ProjectGuid>
     <RootNamespace>ArrayConsoleApplication</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Array</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
