--- a/programowanie/InstructionIfConsoleApplication/InstructionIfConsoleApplication.vcxproj
+++ b/programowanie/InstructionIfConsoleApplication/InstructionIfConsoleApplication.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{dd003a0e-4e9b-4616-aa14-3109a59a72d1}</ProjectGuid>
     <RootNamespace>InstructionIfConsoleApplication</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>InstructionIf</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
