--- a/programowanie/ReadAndWriteFilesConsoleApplication/ReadAndWriteFilesConsoleApplication.vcxproj
+++ b/programowanie/ReadAndWriteFilesConsoleApplication/ReadAndWriteFilesConsoleApplication.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{bcd0c621-d708-4e9a-9912-6600c2444e78}</ProjectGuid>
     <RootNamespace>ReadAndWriteFilesConsoleApplication</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ReadAndWriteFiles</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
