--- a/programowanie/Inheritance/Inheritance.vcxproj
+++ b/programowanie/Inheritance/Inheritance.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4600d5dc-3afb-49b2-85d0-897103daf533}</ProjectGuid>
-    <RootNamespace>firstObjectConsoleApplication</RootNamespace>
+    <ProjectGuid>{3d4325a3-34d2-47ab-81f5-e1982920ad86}</ProjectGuid>
+    <RootNamespace>Inheritance</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>FirstObject</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -129,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BankAccount.cpp" />
-    <ClCompile Include="firstObjectConsoleApplication.cpp" />
+    <ClCompile Include="Inheritance.cpp" />
+    <ClCompile Include="SavingBankAccount.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BankAccount.h" />
+    <ClInclude Include="SavingBankAccount.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
