--- a/programowanie/ZadanieKlasy/ZadanieKlasy.vcxproj
+++ b/programowanie/ZadanieKlasy/ZadanieKlasy.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4600d5dc-3afb-49b2-85d0-897103daf533}</ProjectGuid>
-    <RootNamespace>firstObjectConsoleApplication</RootNamespace>
+    <ProjectGuid>{ee038b1c-9fba-4985-ac83-a445c8df6458}</ProjectGuid>
+    <RootNamespace>ZadanieKlasy</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>FirstObject</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,11 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BankAccount.cpp" />
-    <ClCompile Include="firstObjectConsoleApplication.cpp" />
+    <ClCompile Include="ZadanieKlasy.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BankAccount.h" />
+    <ClInclude Include="Square.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
